attempt to fix checkbox overlapping reset btn in mobile filters modal

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -436,6 +436,7 @@
     position: relative;
     position: -webkit-sticky; /* we can at least give ios users a fixed top bar */
     top: -1px; /* Hide un-styleable outline on #degree-search-sidebar:target */
+    z-index: 999;
   }
 
   #degree-search-sidebar .degree-search-sort {
